; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_cookie.c_cookie_hash_domain.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_cookie.c_cookie_hash_domain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@COOKIE_HASH_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i64)* @cookie_hash_domain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @cookie_hash_domain(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = load i64, i64* %4, align 8
  %9 = getelementptr inbounds i8, i8* %7, i64 %8
  store i8* %9, i8** %5, align 8
  store i64 5381, i64* %6, align 8
  br label %10

10:                                               ; preds = %14, %2
  %11 = load i8*, i8** %3, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = icmp ult i8* %11, %12
  br i1 %13, label %14, label %26

14:                                               ; preds = %10
  %15 = load i64, i64* %6, align 8
  %16 = shl i64 %15, 5
  %17 = load i64, i64* %6, align 8
  %18 = add i64 %17, %16
  store i64 %18, i64* %6, align 8
  %19 = load i8*, i8** %3, align 8
  %20 = getelementptr inbounds i8, i8* %19, i32 1
  store i8* %20, i8** %3, align 8
  %21 = load i8, i8* %19, align 1
  %22 = sext i8 %21 to i32
  %23 = call i64 @Curl_raw_toupper(i32 %22)
  %24 = load i64, i64* %6, align 8
  %25 = xor i64 %24, %23
  store i64 %25, i64* %6, align 8
  br label %10

26:                                               ; preds = %10
  %27 = load i64, i64* %6, align 8
  %28 = load i64, i64* @COOKIE_HASH_SIZE, align 8
  %29 = urem i64 %27, %28
  ret i64 %29
}

declare dso_local i64 @Curl_raw_toupper(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
